- Change how documentation is produced - Update FontAwesome to 5.14.0 - Use python for the CI scripting instead of a shell script